Fixed wind talking in the overworld when doing a weather command.